20231229 lecture and challenge